[imad-console] Updates ui/page-one.html

--- a/ui/page-one.html
+++ b/ui/page-one.html
@@ -1,2 +1,21 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>Page One</title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr>
+        <h3>Page One</h3>
+        <div>
+            Sept 19 2016
+        </div>
+        <div>
+            <p>
+                Pins may also serve other functions, like Serial, I2C, SPI. These functions are normally activated by the corresponding library. The diagram below shows pin mapping for the popular ESP-12 module.
+            </p>
+        </div>
+    </body>
 </html>
