--- a/ui/page-one.html
+++ b/ui/page-one.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Page One</title>
+        <meta name="viewport" content="width-device-width, initial-width=1"/>
     </head>
     <body>
         <div>
