--- a/ui/page-one.html
+++ b/ui/page-one.html
@@ -3,8 +3,18 @@
     <head>
         <title>Page One</title>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <style>
+            .container  {
+             max-width : 800px;  
+             font-family: sans-serif;
+             margin:0 auto;
+             color: grey;
+            }
+            }
+        </style>
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -17,6 +27,7 @@
             <p>
                 Pins may also serve other functions, like Serial, I2C, SPI. These functions are normally activated by the corresponding library. The diagram below shows pin mapping for the popular ESP-12 module.
             </p>
+        </div>
         </div>
     </body>
 </html>
