--- a/ui/page-one.html
+++ b/ui/page-one.html
@@ -8,7 +8,10 @@
              max-width : 800px;  
              font-family: sans-serif;
              margin:0 auto;
-             color: grey;
+             color: #3c3a3a;
+             padding-top: 60px;
+             padding-left: 10px;
+             padding-right: 10px;
             }
         </style>
     </head>
