--- a/ui/page-one.html
+++ b/ui/page-one.html
@@ -3,17 +3,7 @@
     <head>
         <title>Page One</title>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <style>
-            .container  {
-             max-width : 800px;  
-             font-family: sans-serif;
-             margin:0 auto;
-             color: #3c3a3a;
-             padding-top: 60px;
-             padding-left: 10px;
-             padding-right: 10px;
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container">
